k8s/finance-demo/demo-app/pgadmin/pgadmin-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  labels:
    name: pgadmin-ingress
spec:
  rules:
    - host: pgadmin.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
